--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "expo": "~43.0.3",
+    "expo-font": "~10.0.3",
     "expo-image-picker": "^11.0.3",
     "expo-status-bar": "~1.1.0",
     "jwt-decode": "^3.1.2",
@@ -26,12 +29,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "^3.8.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
