--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "12.1.1",
+    "react-native-user-avatar": "^1.0.7",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "yarn": "^1.22.17"
