--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "^5.0.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -31,12 +32,16 @@
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.21.2",
     "react-native": "0.64.3",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-date-picker": "^4.1.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-neat-date-picker": "^1.1.2",
     "react-native-paper": "^4.11.0",
+    "react-native-paper-dates": "^0.8.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^1.0.0-alpha.23",
