--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-paper": "^4.11.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
