--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-
-    "react-native-numeric-input": "^1.9.0",
-
     "react-native-neat-date-picker": "^1.1.2",
-
+    "react-native-numeric-input": "^1.9.0",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.11.0",
     "react-native-paper-dates": "^0.8.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-start": "^0.2.0",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-user-avatar": "^1.0.7",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
