--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "^11.0.3",
     "expo-status-bar": "~1.1.0",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^5.0.1",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
