--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
     "native-base": "^3.2.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.21.2",
     "react-native": "0.64.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-calendars": "^1.1274.0",
     "react-native-date-picker": "^4.1.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.2",
@@ -46,6 +49,7 @@
     "react-native-paper": "^4.11.0",
     "react-native-paper-dates": "^0.8.0",
     "react-native-reanimated": "^2.2.4",
+    "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-start": "^0.2.0",
